--- a/features/poller/pom.xml
+++ b/features/poller/pom.xml
@@ -14,6 +14,7 @@
     <module>api</module>
     <module>client-rpc</module>
     <module>registry</module>
+    <module>monitors</module>
     <module>remote</module>
     <module>runtime</module>
     <module>shell</module>
