--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -20,10 +20,6 @@
             <Bundle-RequiredExecutionEnvironment>JavaSE-1.8</Bundle-RequiredExecutionEnvironment>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Version>${project.version}</Bundle-Version>
-            <Import-Package>
-              org.eclipse.persistence.internal.jaxb.many;resolution:=optional,
-              *
-            </Import-Package>
           </instructions>
         </configuration>
       </plugin>
@@ -228,6 +224,11 @@
     <dependency>
       <groupId>org.opennms.features.poller</groupId>
       <artifactId>org.opennms.features.poller.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms.features.poller.monitors</groupId>
+      <artifactId>org.opennms.features.poller.monitors.core</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opennms.tests</groupId>
