Add poller to minion

--- a/opennms-full-assembly/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/opennms-full-assembly/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -22,6 +22,7 @@ featuresBoot=karaf-framework,ssh,config,features,management,\
   opennms-topology-runtime-application,\
   opennms-topology-runtime-bsm,\
   opennms-provisioning-shell,\
+  opennms-poller-shell,\
   opennms-topology-runtime-graphml,\
   osgi-nrtg-local,\
   vaadin-node-maps,\
