--- a/pom.xml
+++ b/pom.xml
@@ -1878,6 +1878,16 @@
       </dependency>
       <dependency>
         <groupId>org.opennms.features.poller</groupId>
+        <artifactId>org.opennms.features.poller.client-rpc</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.features.poller</groupId>
+        <artifactId>org.opennms.features.poller.shell</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.features.poller</groupId>
         <artifactId>org.opennms.features.poller.remote</artifactId>
         <version>${project.version}</version>
       </dependency>
