--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -205,6 +205,7 @@
             <feature>opennms-javamail</feature>
             <feature>opennms-model</feature>
             <feature>opennms-poller-api</feature>
+            <feature>opennms-poller-shell</feature>
             <feature>opennms-provisioning</feature>
             <feature>opennms-provisioning-detectors</feature>
             <feature>opennms-provisioning-shell</feature>
@@ -576,6 +577,13 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-detectorclient-rpc</artifactId>
+      <version>${project.version}</version>
+      <type>pom</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms.features.poller</groupId>
+      <artifactId>org.opennms.features.poller.client-rpc</artifactId>
       <version>${project.version}</version>
       <type>pom</type>
       <scope>provided</scope>
