--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -741,6 +741,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.netmgt.model.outage;version=${opennms.osgi.version},\
         org.opennms.netmgt.model.topology;version=${opennms.osgi.version},\
         org.opennms.netmgt.poller;version=${opennms.osgi.version},\
+        org.opennms.netmgt.poller.registry.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.provision;version=${opennms.osgi.version},\
         org.opennms.netmgt.provision.detector.common;version=${opennms.osgi.version},\
         org.opennms.netmgt.provision.detector.registry.api;version=${opennms.osgi.version},\
