--- a/features/poller/api/pom.xml
+++ b/features/poller/api/pom.xml
@@ -34,6 +34,10 @@
       <type>pom</type>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.rpc</groupId>
+      <artifactId>org.opennms.core.rpc.xml</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.0-api</artifactId>
       <scope>provided</scope>
