changes to get poller on minion installed

--- a/features/poller/client-rpc/pom.xml
+++ b/features/poller/client-rpc/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms.features.poller</groupId>
   <artifactId>org.opennms.features.poller.client-rpc</artifactId>
-  <name>OpenNMS :: Features :: Poller :: API</name>
+  <name>OpenNMS :: Features :: Poller :: RPC Client</name>
   <packaging>bundle</packaging>
   <build>
     <plugins>
@@ -21,7 +21,6 @@
             <Bundle-RequiredExecutionEnvironment>JavaSE-1.8</Bundle-RequiredExecutionEnvironment>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Version>${project.version}</Bundle-Version>
-            <Export-Package>org.opennms.netmgt.poller.*;version="${project.version}"</Export-Package>
           </instructions>
         </configuration>
       </plugin>
