--- a/features/minion/repository/pom.xml
+++ b/features/minion/repository/pom.xml
@@ -52,6 +52,7 @@
                                 <feature>minion-heartbeat</feature>
                                 <feature>minion-snmp-proxy</feature>
                                 <feature>minion-provisiond-detectors</feature>
+                                <feature>minion-poller</feature>
                             </features>
                             <repository>target/maven-repo</repository>
                         </configuration>
@@ -111,6 +112,11 @@
         <dependency>
             <groupId>org.opennms.features.minion</groupId>
             <artifactId>core-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opennms.features.minion.shell</groupId>
+            <artifactId>org.opennms.features.minion.shell.poller</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -179,6 +185,25 @@
             <artifactId>org.opennms.core.rpc.camel-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+	
+		<dependency>
+			<groupId>org.opennms.features.poller</groupId>
+			<artifactId>org.opennms.features.poller.client-rpc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.opennms.features.poller</groupId>
+			<artifactId>org.opennms.features.poller.registry</artifactId>
+			<version>${project.version}</version>
+	    </dependency>
+		<dependency>
+			<groupId>org.opennms</groupId>
+			<artifactId>opennms-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>3.0.6</version>
+		</dependency>
     </dependencies>
 
     <pluginRepositories>
@@ -252,6 +277,17 @@
             <id>coova</id>
             <name>Coova Repository</name>
             <url>http://maven.opennms.org/content/repositories/coova/</url>
-        </repository>
+	    </repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<id>jboss-repo</id>
+			<name>JBoss Repository</name>
+			<url>http://maven.opennms.org/content/repositories/jboss-repo/</url>
+		</repository>
     </repositories>
 </project>
