--- a/features/minion/shell/poller/pom.xml
+++ b/features/minion/shell/poller/pom.xml
@@ -36,6 +36,12 @@
         <dependency>
             <groupId>org.apache.karaf.shell</groupId>
             <artifactId>org.apache.karaf.shell.console</artifactId>
-        </dependency>
+            <version>${minionKarafVersion}</version>
+	    </dependency>
+		<dependency>
+			<groupId>org.opennms.features.poller</groupId>
+			<artifactId>org.opennms.features.poller.registry</artifactId>
+			<version>${project.version}</version>
+		</dependency>
     </dependencies>
 </project>
