--- a/features/poller/registry/pom.xml
+++ b/features/poller/registry/pom.xml
@@ -32,8 +32,12 @@
       <artifactId>org.opennms.features.poller.api</artifactId>
     </dependency>
     <dependency>
-        <groupId>org.osgi</groupId>
-        <artifactId>org.osgi.core</artifactId>
-      </dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
   </dependencies>
 </project>
