Update Pollerd to invoke Monitors using the LocationAwarePollerClient.

--- a/core/xml/pom.xml
+++ b/core/xml/pom.xml
@@ -55,6 +55,10 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.migesok</groupId>
+      <artifactId>jaxb-java-time-adapters</artifactId>
+    </dependency>
     <!-- breaks generation :(
     <dependency>
       <groupId>org.wicketstuff</groupId>
