--- a/features/poller/client-rpc/pom.xml
+++ b/features/poller/client-rpc/pom.xml
@@ -48,5 +48,10 @@
       <groupId>org.opennms.core.ipc.rpc</groupId>
       <artifactId>org.opennms.core.ipc.rpc.xml</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.core.test-api</groupId>
+      <artifactId>org.opennms.core.test-api.xml</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
