--- a/pom.xml
+++ b/pom.xml
@@ -1331,6 +1331,7 @@
     <jacksonVersion>1.9.13</jacksonVersion>
     <jasperreportsVersion>6.3.0</jasperreportsVersion>
     <jasperreportsMavenPluginVersion>1.0-beta-4-OPENNMS-20160912-1</jasperreportsMavenPluginVersion>
+    <jaxbJavaTimeAdaptersVersion>1.1.3</jaxbJavaTimeAdaptersVersion>
     <jettyVersion>8.1.15.v20140411</jettyVersion>
     <jfreechartVersion>1.0.19</jfreechartVersion>
     <jcommonVersion>1.0.23</jcommonVersion>
@@ -3817,6 +3818,11 @@
         <groupId>org.eclipse.jdt.core.compiler</groupId>
         <artifactId>ecj</artifactId>
         <version>${ecjVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.migesok</groupId>
+        <artifactId>jaxb-java-time-adapters</artifactId>
+        <version>${jaxbJavaTimeAdaptersVersion}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
