--- a/features/poller/monitors/core/pom.xml
+++ b/features/poller/monitors/core/pom.xml
@@ -80,34 +80,95 @@
       <groupId>org.opennms.features.poller</groupId>
       <artifactId>org.opennms.features.poller.api</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-config</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-config-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
+	<dependency>
+	  <groupId>org.opennms</groupId>
+	  <artifactId>opennms-config</artifactId>
+	  <scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms</groupId>
+		<artifactId>opennms-config-api</artifactId>
+		<scope>provided</scope>
+	</dependency>
 	<dependency>
 		<groupId>org.opennms.core.jmx</groupId>
 		<artifactId>org.opennms.core.jmx.api</artifactId>
 		<version>${project.version}</version>
 	</dependency>
-    <dependency>
+	<dependency>
 		<groupId>org.opennms.core.jmx</groupId>
 		<artifactId>org.opennms.core.jmx.impl</artifactId>
 		<version>${project.version}</version>
 	</dependency>
 	<dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-jexl</artifactId>
-    </dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-jexl</artifactId>
+	</dependency>
 	<dependency>
 		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
 		<version>${guavaVersion}</version>
+	</dependency>
+	<dependency>
+		<groupId>bsf</groupId>
+		<artifactId>bsf</artifactId>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms</groupId>
+		<artifactId>opennms-javamail-api</artifactId>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.dependencies</groupId>
+		<artifactId>jcifs-dependencies</artifactId>
+		<type>pom</type>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core</groupId>
+		<artifactId>org.opennms.core.daemon</artifactId>
+	</dependency>
+
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.dependencies</groupId>
+		<artifactId>spring-test-dependencies</artifactId>
+		<type>pom</type>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core.test-api</groupId>
+		<artifactId>org.opennms.core.test-api.services</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core.test-api</groupId>
+		<artifactId>org.opennms.core.test-api.db</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core.test-api</groupId>
+		<artifactId>org.opennms.core.test-api.http</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms</groupId>
+		<artifactId>opennms-dao-mock</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core.test-api</groupId>
+		<artifactId>org.opennms.core.test-api.snmp</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.core.test-api</groupId>
+		<artifactId>org.opennms.core.test-api.dns</artifactId>
+		<scope>test</scope>
 	</dependency>
   </dependencies>
 </project>
