--- a/features/poller/monitors/core/pom.xml
+++ b/features/poller/monitors/core/pom.xml
@@ -107,7 +107,6 @@
 	<dependency>
 		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
-		<version>${guavaVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>bsf</groupId>
@@ -168,6 +167,18 @@
 	<dependency>
 		<groupId>org.opennms.core.test-api</groupId>
 		<artifactId>org.opennms.core.test-api.dns</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.dependencies</groupId>
+		<artifactId>spring-web-dependencies</artifactId>
+		<type>pom</type>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.opennms.dependencies</groupId>
+		<artifactId>spring-security-dependencies</artifactId>
+		<type>pom</type>
 		<scope>test</scope>
 	</dependency>
   </dependencies>
