Add CiscoPing monitor

--- a/features/poller/monitors/core/pom.xml
+++ b/features/poller/monitors/core/pom.xml
@@ -90,6 +90,10 @@
 		<artifactId>opennms-config-api</artifactId>
 		<scope>provided</scope>
 	</dependency>
+    <dependency>
+		<groupId>org.opennms</groupId>
+		<artifactId>opennms-dao-api</artifactId>
+	</dependency>
 	<dependency>
 		<groupId>org.opennms.core.jmx</groupId>
 		<artifactId>org.opennms.core.jmx.api</artifactId>
