--- a/features/minion/shell/poller/pom.xml
+++ b/features/minion/shell/poller/pom.xml
@@ -37,11 +37,10 @@
             <groupId>org.apache.karaf.shell</groupId>
             <artifactId>org.apache.karaf.shell.console</artifactId>
             <version>${minionKarafVersion}</version>
-	    </dependency>
-		<dependency>
-			<groupId>org.opennms.features.poller</groupId>
-			<artifactId>org.opennms.features.poller.registry</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.opennms.features.poller</groupId>
+            <artifactId>org.opennms.features.poller.api</artifactId>
+        </dependency>
     </dependencies>
 </project>
