--- a/features/minion/repository/pom.xml
+++ b/features/minion/repository/pom.xml
@@ -195,20 +195,20 @@
             <artifactId>org.opennms.core.ipc.sink.camel-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
-	
-		<dependency>
-			<groupId>org.opennms.features.poller</groupId>
-			<artifactId>org.opennms.features.poller.client-rpc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.opennms</groupId>
-			<artifactId>opennms-services</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>3.0.6</version>
-		</dependency>
+        <dependency>
+            <groupId>org.opennms.features.poller</groupId>
+            <artifactId>org.opennms.features.poller.client-rpc</artifactId>
+        </dependency>
+        <dependency>
+            <!-- FIXME: Compilation breaks if this is not defined here? -->
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opennms</groupId>
+            <artifactId>opennms-services</artifactId>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
@@ -278,17 +278,17 @@
             <id>coova</id>
             <name>Coova Repository</name>
             <url>http://maven.opennms.org/content/repositories/coova/</url>
-	    </repository>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>jboss-repo</id>
-			<name>JBoss Repository</name>
-			<url>http://maven.opennms.org/content/repositories/jboss-repo/</url>
-		</repository>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <id>jboss-repo</id>
+            <name>JBoss Repository</name>
+            <url>http://maven.opennms.org/content/repositories/jboss-repo/</url>
+        </repository>
     </repositories>
 </project>
