--- a/features/poller/client-rpc/pom.xml
+++ b/features/poller/client-rpc/pom.xml
@@ -48,5 +48,10 @@
       <artifactId>org.opennms.core.test-api.xml</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.core.snmp</groupId>
+      <artifactId>org.opennms.core.snmp.api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
